<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/returnHome"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/fleche_retour"
            android:layout_marginStart="10dp"
            android:gravity="right" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calistoga"
            android:layout_marginStart="90dp"
            android:text="@string/appTitle"
            android:textSize="24sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/iconBasket"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/panier"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/nbCarInBasket"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/fond_quantitepanier"
                android:gravity="center"
                android:layout_marginStart="15sp"
                android:fontFamily="@font/calistoga"
                android:layout_marginTop="-5sp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iconConnection"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:gravity="right"
            android:src="@drawable/connexion"
            android:layout_marginEnd="10dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleConnection"
        android:text="@string/connectionTitle"
        android:textSize="40sp"
        android:fontFamily="@font/calistoga"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@drawable/fond_linearlayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">


    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/fond_edittext"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/fond_edittext"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/connection"
        android:backgroundTint="@color/grey"
        android:textColor="@color/darkGrey"
        android:fontFamily="@font/calistoga"
        android:text="@string/connectionTitle"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/signUp"
    android:text="@string/signUp"
    android:textSize="20dp"
    android:fontFamily="@font/calistoga"
    android:layout_marginBottom="50dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
    app:layout_constraintLeft_toLeftOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>